src/files/styles/style.css
/***
standalone: true
***/

:root {
	--colorBlue: #259dcf;
	--colorDarkGold: #998758;
	--colorGold: #b09e6e;
	--colorLightGold: #c0ae7e;
	--colorLighterGold: #e2d5b2;
	--colorLightestGold: #f2ead4;
	--colorDarkestBrown: #3e3e3e;
	--colorDarkBrown: #777;
	--colorBrown: #9f9f9f;
	--colorLightBrown: #aaa;
	--colorLighterBrown: #dbdbdb;
	--colorLightestBrown: #f1f1f1;

	--barSize: 2.5rem;
	--paddingSize: 3%;

	--bodyFont: sans-serif; /* -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; */
	--bodyBackground: var(--colorLightestBrown);
	--bodyColor: var(--colorDarkestBrown);

	--headingFont: sans-serif; /* Cambria, Calibri, Helvetica, Arial, sans-serif; */

	--codeFont: monospace;
	--codeBackground: var(--colorLightestGold);
	--codeBorder: hsl(186, 8%, 88%);  /* hsl(192, 8%, 84%) */
	--codeColor: hsl(186, 8%, 15%);

	--quoteColor: hsl(11, 90%, 55%);

	--linkColor: var(--colorBlue);
	--accentColor: var(--colorDarkGold);
}

* {
	box-sizing: border-box;
}

/* icons */
.up > .icon:before {
	content: '↑';
}
.down > .icon:before {
	content: '↓';
}
.prev > .icon:before {
	content: '←';
}
.next > .icon:before {
	content: '→';
}

/* main */
html {
	font-family: var(--bodyFont);
	background: var(--bodyBackground);
	color: var(--bodyColor);
	word-wrap: break-word;
}
html, body, div {
	margin: 0;
	padding: 0;
}
h1, h2, h3, h4 {
	font-family: var(--headingFont);
}

/* links */
a, .link  {
	display: inline-block;
	text-decoration: none;
	cursor: pointer;
	color: var(--linkColor);
}
a:hover, .link:hover {
	text-decoration: underline;
}

/* code */
code,
pre code,
.hljs {
	font-weight: normal;
	font-size: 1em;
	line-height: 1em;
	padding: 0 0.5em 0;
	border: 1px solid var(--codeBorder);
	border-radius: 0.5em;

	word-wrap: normal;
	white-space: pre;
	font-family: var(--codeFont);
	background: var(--codeBackground);
	color: var(--codeColor);
}

pre code,
.hljs {
	display: block flow;
	line-height: 1.5em;
	padding: 1em 1.5em;
	overflow: scroll;
	width: 100%;
}

/* misc */
blockquote {
	margin: 3em;
	color: var(--quoteColor);
}
blockquote em {
	font-style: italic;
}
em {
	font-style: italic;
}
nav,
nav li {
	list-style: none;
}


/* ====================================
   Layout */

html, body, .container, .sidebar, .sidebar .list-menu {
	height: 100%;
}
html, body, div, nav, section, aside, article {
	width: 100%;
}
.topbar {
	position: fixed;
	z-index: 2;
	height: var(--barSize);
	border-bottom: 1px solid var(--colorLightBrown);
	box-shadow: 0 0 1px white;
	background: var(--bodyBackground);
	top: 0;
	left: 0;
}
.sidebar {
	box-sizing: content-box;
	position: fixed;
	z-index: 1;
	width: 200px;
	padding-right: var(--paddingSize);
	top: 0;
	left: -200px;
	transition: left 0.3s ease-in;
}
.sidebar > .list-menu {
	overflow: auto;
	background: var(--bodyBackground);
	border-right: 1px solid var(--colorLightBrown);
	box-shadow: 0 0 1px white;
}
.topbar:hover + .sidebar,
.sidebar:hover {
	left: 0;
}
.contentbar {
	padding: var(--barSize) var(--paddingSize) 0;
	background: white;
	border-bottom: 1px solid var(--colorLightBrown);
	box-shadow: 0 0 1px white;
}

/* topbar */
.topbar {
	display: grid;
	grid-template-columns: 1fr 300px;
	grid-template-rows: var(--barSize);
	grid-template-areas: "links search";
	overflow: hidden;
}
.topbar .search {
	grid-area: search;
	padding: 0.3rem 0.5rem 0;
}
.links {
	grid-area: links;
	line-height: var(--barSize);
}
.links a {
	line-height: 1rem;
	font-size: 1rem;
	margin: 0 5px;
	padding: 0 7px;
	color: var(--colorDarkestBrown);
	font-weight: bolder;
}
.topbar .links a {
	padding-bottom: 2px;
	border-bottom: 3px solid transparent;
}
.topbar .links a:hover,
.topbar .links a.active {
	text-decoration: none;
	border-color: var(--colorLightGold);
}
.topbar .links a.logo {
	margin-left: 5px;
	padding-bottom: 3px;
}

.topbar .links a.logo,
.list-menu-project > .list-menu-title a {
	font-size: 1.25rem;
}
.topbar .search * {
	box-sizing: content-box;
}
.topbar .search .gsc-control-cse {
	padding: 0;
	border: none;
	background: none;
	border: none;
}

/* bottombar */
.bottombar {
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: var(--barSize);
	grid-template-areas: "about links";
	background: var(--bodyBackground);
	padding: 0 var(--paddingSize);
	line-height: var(--barSize);
}
.bottombar .about {
	grid-area: about;
}
.bottombar .links a {
	font-weight: normal;
	border: none;
}


/* ====================================
   Pages */

/* hide sidebar on docs and landing page */
.page-index .contentbar,
.page-docs .contentbar {
	background: var(--bodyBackground);
	border-left: none;
	padding-bottom: var(--barSize);
}


/* ====================================
   Sidebar and Docs Menus */

.list-menu {
	cursor: default;
}
.list-menu ul,
.list-menu li {
	margin: 0;
	padding: 0;
}
.list-menu a,
.list-menu .active {
	line-height: 1rem;
	font-size: 1rem;
	color: var(--colorDarkestBrown);
	font-weight: bolder;
	padding-left: 5px;
	border-left: 3px solid transparent;
}
.list-menu a:hover,
.list-menu .active {
	color: var(--colorDarkGold);
	border-color: var(--colorLightGold);
}

.sidebar .list-menu-items {
	margin: 0 15px;
}
.list-menu h1,
.list-menu h2,
.list-menu h3,
.list-menu h4,
.list-menu h5,
.list-menu h6 {
	margin: 0.2em 5px;
	padding: 0.2em 0;
}

.docs .list-menu-project > .list-menu-title {
	display: none;
}
.docs .list-menu-categories {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
   align-content: center;
	grid-gap: 1rem;
   justify-content: space-evenly;
}
.docs .list-menu-category {
	grid-column: span 1;
	grid-row: span 1;
}
.docs .list-menu-category > .list-menu-title a {
	all: unset;
}
.docs .list-menu-items {
	padding: 1rem var(--paddingSize);
	background: white;
	border-radius: 3px;
}


/* ====================================
   Splash & Error */

.splash section,
.error section {
	margin: 3em 0;
	padding: 1.5em 0;
	text-align: center;
}
/* ... */

